templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v2-secure
spec:
  ports:
    - port: 8081
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver-v2-secure
